@@ -6,6 +6,11 @@ Changes that could break older environments:
 
 Fixed bugs:
 -----------
+
+* In Ant 1.7.0, <fileset> in <javadoc> does not by default include only
+  **/*.java as the documentation claims and earlier revisions did.
+  Bugzilla report 41264.
+
 * SPI support in jar was broken.
   Bugzilla report 41201.
   
